# basic2023

./: .gitignore  Makefile.am  README  basic.h  config.h  config.h.in~  configure.ac  configure~  file.bas  main.c  token.c
src/: Makefile.am  basic.c  basic.h  editor.c  expression.c  main.c  sort.bas  token.c
